setting page esta responsive para 2xl y xl

--- a/src/app/pages/setting-page/setting-page.component.html
+++ b/src/app/pages/setting-page/setting-page.component.html
@@ -12,7 +12,7 @@
             <!--PRIMERA FILA DE BLOQUES-->
             <div class="flex justify-center">
                 <!--Bloque de arriba a la izquierda-->
-                <div class="flex justify-center w-1/2 m-5 h-36">
+                <div class="flex justify-center w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <!--Bloque de arriba a la derecha-->
-                <div class="flex justify-center w-1/2 m-5 h-36">
+                <div class="flex justify-center w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -51,7 +51,7 @@
             <!--SEGUNDA FILA DE BLOQUES-->
             <div class="flex justify-center">
                 <!--Bloque de abajo a la izquierda-->
-                <div class="flex justify-center w-1/2 m-5 h-36">
+                <div class="flex justify-center w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <!--Bloque de arriba a la derecha-->
-                <div class="flex justify-center w-1/2 m-5 h-36">
+                <div class="flex justify-center w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -88,8 +88,12 @@
                 </div>
             </div>
             <!--TERCER BLOQUE (BOTON DE EDITAR)-->
-            <div class=" flex justify-center items-center w-full h-36">
-                <button class=" flex justify-center items-center w-32 h-2/6 bg-lime-500 rounded-lg text-md text-white font-bold shadow-lg hover:bg-yellow-400 py-2 px-4 hover:scale-105 ease-in-out duration-300">Editar</button>
+            <div class=" flex justify-center items-center w-full h-12">
+                <button class=" flex justify-center items-center 2xl:w-32 2xl:h-12 xl:w-28 xl:h-9 bg-lime-500 rounded-lg 2xl:text-md xl:text-sm text-white font-bold shadow-lg hover:bg-yellow-400 py-2 2xl:px-4 xl:px-2 hover:scale-105 ease-in-out duration-300">Editar</button>
+            </div>
+            <!--Linea verde-->
+            <div class="flex justify-center px-9">
+                <div class="flex flex-col justify-center bg-lime-500 w-11/12 2xl:h-2 h-1 rounded 2xl:mt-10 xl:mt-5"></div>
             </div>
         </div>
     </div>
