Termine el disenio de el apartado de setting completo y borre todos los archivos .test

--- a/src/app/components/side-nav-settings/side-nav-settings.component.html
+++ b/src/app/components/side-nav-settings/side-nav-settings.component.html
@@ -25,9 +25,8 @@
           </div>
           </li>
         </a>
-      
       <li class="">
-        <a routerLink="/bill-page" routerLinkActive="text-lime-600">
+        <a routerLink="/password-page" routerLinkActive="text-lime-600">
           <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
           rounded-lg items-center">
             <img src="../../../assets/img/padlock.png" class="w-5 h-5">
@@ -36,17 +35,17 @@
         </a>
       </li>
       <li class="">
-        <a routerLink="/product-page" routerLinkActive="text-lime-600">
+        <a routerLink="/notifications-page" routerLinkActive="text-lime-600">
           <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
           rounded-lg items-center">
-          <img src="../../../assets/img/database.png" class="w-5 h-5">
-          <span class="text-lg text-end">Bases de datos</span>
+          <img src="../../../assets/img/bell.png" class="w-5 h-5">
+          <span class="text-lg text-end">Notificaciones</span>
           </div>
         </a>
       </li>
      
       <li class="">
-        <a routerLink="/." routerLinkActive="text-lime-600">
+        <a routerLink="/help-page" routerLinkActive="text-lime-600">
           <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
           rounded-lg items-center">
           <img src="../../../assets/img/help.png" class="w-5 h-5">
