--- a/src/app/pages/setting-page/setting-page.component.html
+++ b/src/app/pages/setting-page/setting-page.component.html
@@ -5,14 +5,16 @@
             <p class="justify-center  m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Configuración de la cuenta</p>
         <app-user-icon></app-user-icon>   
         </div>
-        <div class="w-5/5 h-5/6 bg-white relative rounded-xl mr-10">
+        <div class="flex flex-col justify center w-5/5 h-2/3 bg-white relative rounded-xl mr-10">
+          <div class="flex flex-col h-full w-full justify-center items-center">
+
             <p class="xl:text-xl 2xl:text-2xl font-bold text-center 2xl:m-9 xl:m-6">
                 Información general
             </p>
             <!--PRIMERA FILA DE BLOQUES-->
-            <div class="flex justify-center">
+            <div class="flex justify-center w-full">
                 <!--Bloque de arriba a la izquierda-->
-                <div class="flex justify-center w-1/2 m-2.5 h-26">
+                <div class="flex justify-end w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -30,7 +32,7 @@
                     </div>
                 </div>
                 <!--Bloque de arriba a la derecha-->
-                <div class="flex justify-center w-1/2 m-2.5 h-26">
+                <div class="flex justify-start w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -49,9 +51,9 @@
                 </div>  
             </div>
             <!--SEGUNDA FILA DE BLOQUES-->
-            <div class="flex justify-center">
+            <div class="flex justify-center w-full">
                 <!--Bloque de abajo a la izquierda-->
-                <div class="flex justify-center w-1/2 m-2.5 h-26">
+                <div class="flex justify-end w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -69,7 +71,7 @@
                     </div>
                 </div>
                 <!--Bloque de arriba a la derecha-->
-                <div class="flex justify-center w-1/2 m-2.5 h-26">
+                <div class="flex justify-start w-1/2 m-2.5 h-26">
                     <div class="w-5/6 mt-5 px-5">
                         <label
                           class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full"
@@ -89,12 +91,10 @@
             </div>
             <!--TERCER BLOQUE (BOTON DE EDITAR)-->
             <div class=" flex justify-center items-center w-full h-12">
-                <button class=" flex justify-center items-center 2xl:w-32 2xl:h-12 xl:w-28 xl:h-9 bg-lime-500 rounded-lg 2xl:text-md xl:text-sm text-white font-bold shadow-lg hover:bg-yellow-400 py-2 2xl:px-4 xl:px-2 hover:scale-105 ease-in-out duration-300">Editar</button>
+                <button class=" flex justify-center items-center 2xl:w-32 2xl:h-12 xl:w-28 xl:h-9 bg-lime-500 rounded-lg 2xl:text-md xl:text-sm text-white font-bold shadow-lg hover:bg-gray-500 py-2 2xl:px-4 xl:px-2 hover:scale-105 ease-in-out duration-300">Editar</button>
             </div>
-            <!--Linea verde-->
-            <div class="flex justify-center px-9">
-                <div class="flex flex-col justify-center bg-lime-500 w-11/12 2xl:h-2 h-1 rounded 2xl:mt-10 xl:mt-5"></div>
-            </div>
+          </div>
+            
         </div>
     </div>
 </div>
