me funciono el more-opt component!!

--- a/src/app/components/bill-table/bill-table.component.html
+++ b/src/app/components/bill-table/bill-table.component.html
@@ -1,6 +1,6 @@
 <div class="m-5 my-5 ml-0 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg relative 2xl:text-md">
     Datos de las facturas
-    <table class="w-full my-3" style="text-align:justify;">
+    <table class="w-full my-3 table-auto" style="text-align:justify;">
         <thead>
             <tr class="text-xs 2xl:text-sm">
                 <th>ID Factura</th>
@@ -20,9 +20,8 @@
                 <td class="py-1">{{fecha}}</td>
                 <td class="py-1">{{total}}</td>
                 <td class="py-1">{{estado}}</td>
-                <td class="py-1"><i class="fa-solid fa-ellipsis-vertical hover:scale-105 ease-in-out duration-300 cursor-pointer"></i></td>
+                <td class="py-1"><app-more-opt></app-more-opt></td>
             </tr>
-
         </tbody>
     </table>
 </div>
