--- a/src/app/components/client-table/client-table.component.html
+++ b/src/app/components/client-table/client-table.component.html
@@ -1,6 +1,6 @@
 <div class="m-5 my-5 ml-0 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg relative 2xl:text-md">
     Datos de los clientes
-    <table class="w-full my-3" style="text-align:justify;">
+    <table class="w-full my-3 table-auto" style="text-align:justify;">
         <thead>
             <tr class="text-xs 2xl:text-sm">
                 <th>Nombre / Razón social</th>
@@ -9,8 +9,8 @@
                 <th>Suscripciones</th>
                 <th>Acciones</th>
             </tr>
-        </thead>     
-        
+        </thead>
+
         <tbody>
             <td colspan="5"><div class="bg-lime-500 w-full h-0.5 rounded-full my-2"></div></td>
             <tr class="text-xs text-black" *ngFor="let cliente of clientList|async">
@@ -19,9 +19,8 @@
                 <td class="py-1">{{ cliente.numeroDeDocumentoCliente }}</td>
                 <td class="py-1">{{ cliente.celularCliente }}</td>
                 <td class="py-1">{{ cliente.celularCliente }}</td>
-                <td class="py-3"><i class="fa-solid fa-ellipsis-vertical hover:scale-105 ease-in-out duration-300 cursor-pointer"></i></td>
+                <td class="py-3"><app-more-opt></app-more-opt></td>
             </tr>
-
         </tbody>
     </table>
 </div>
