--- a/src/app/components/more-opt/more-opt.component.html
+++ b/src/app/components/more-opt/more-opt.component.html
@@ -1,8 +1,8 @@
 
-    <button (click)="onClick1()" class="w-5 h-10 bg-white p-2 justify-end hover:scale-105 ease-in-out duration-300">
+    <button (click)="onClickMenu()" class="w-5 h-10 bg-white p-2 justify-end hover:scale-105 ease-in-out duration-300 z-10">
         <i class="fa-solid fa-ellipsis-vertical hover:scale-105 ease-in-out duration-300 cursor-pointer"></i>
     </button>
-    <div #AsDropdown  id="dropdown" class="bg-white hidden flex-col rounded p-2 text-xs absolute right-48 shadow-lg w-32 z-10">
+    <div #AsDropdown  id="dropdown" class="bg-white hidden flex-col rounded text-xs absolute  2xl:right-48 xl:right-32 shadow-lg 2xl:w-32 xl:w-28 z-30 p-2">
         <a routerLink="" class="flex justify-start items-center content-center py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-eye px-2"></i>Ver detalles</a>
         <a routerLink="" class="flex justify-start items-center content-center py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-pen-to-square px-2"></i>Editar</a>
         <a routerLink="" class="flex justify-start items-center content-center py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-trash-can px-2"></i>Eliminar</a>
