--- a/src/app/components/user-icon/user-icon.component.html
+++ b/src/app/components/user-icon/user-icon.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col w-full relative z-10 ">
 
-        <button (click)="onClick()" class="w-10 h-10 rounded-full shadow-md bg-white p-2 justify-end hover:scale-105 ease-in-out duration-300">
+        <button (click)="onClickMenu()" class="w-10 h-10 rounded-full shadow-md bg-white p-2 justify-end hover:scale-105 ease-in-out duration-300">
             <img src="../../../assets/img/user.png" alt=""/>
         </button>
         <div #AsDropdown id="dropdown" class="bg-white hidden flex-col rounded mt-11 p-3 text-sm absolute right-6 shadow-lg w-40">
