--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -12,7 +12,7 @@
     class="w-2/5 min-h-screen relative flex flex-col bg-white text-gray-700 drop-shadow-lg"
   >
     <div class="w-full h-1/4 pt-2">
-      <div class="w-full h-1/3 flex justify-evenly">
+      <div class="w-full h-auto flex justify-evenly">
         <div class="flex flex-col items-center">
           <label class="toggler-wrapper style-1"> 
             <!-- <input type="checkbox" class=""  #nameInput="ngModel" [(ngModel)]="textboxes"  /> -->
@@ -44,8 +44,8 @@
           <label for="" class="font-semibold leading-tight">Descuento</label>
         </div>
       </div>
-      <div class="w-full flex flex-col h-4/5  pr-5">
-        <div class="flex items-center justify-end h-full textboxes" [class.invalid]="nameInput.invalid">
+      <div class="w-full flex flex-col h-auto  pr-5">
+        <div class="flex items-center justify-end h-full textboxes mb-2" [class.invalid]="nameInput.invalid">
           <label for="">RNC: </label>
           <input
             type="text"
@@ -54,7 +54,7 @@
             class="ml-3 mt-1 shadow-md rounded-sm bg-stone-200"
           />
         </div>
-        <div class="flex items-center justify-end h-full textboxes" [class.invalid]="nameInput2.invalid">
+        <div class="flex items-center justify-end h-full textboxes mb-2" [class.invalid]="nameInput2.invalid">
             <label for="">Credito: </label>
             <input
               type="text"
@@ -63,7 +63,7 @@
               class="ml-3 shadow-md rounded-sm bg-stone-200"
             />
           </div>
-          <div class="flex items-center justify-end h-full textboxes" [class.invalid]="nameInput3.invalid">
+          <div class="flex items-center justify-end h-full textboxes mb-2" [class.invalid]="nameInput3.invalid">
             <label for="">Descuento: </label>
             <input
               type="text"
@@ -74,46 +74,38 @@
           </div>
       </div>
     </div>
-    <div class="w-full h-4/5 flex flex-col justify-around">
+    <div class="w-full h-4/5 flex flex-col justify-between">
         <div>
             <p class="text-base font-semibold mt-2 ml-2">Lista de productos:</p>
-           
+          
             <ul class="w-full h-[35vh] flex flex-col p-5 overflow-y-scroll text-sm">
-              <!-- <li *ngFor="let products of product"> -->
-                {{ product.title }}
-
-                {{  (product.title) }}
-                {{ product.price}}
-              <!-- </li> -->
-
-              <li class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p >{{ product.title }}</p>
-                <h2>{{ product.price | currency: "" }}</h2>
-              </li>
-              
-             
-        </ul>
+              <li *ngFor="let product of myShoppingCart" class="w-full flex justify-between">
+                {{product.title}}
+                &nbsp;&nbsp;
+                ${{product.price}}
+              </li>      
+            </ul>
         
       </div>
       <div class="w-full bg-stone-200">
         <div
           class="flex w-full justify-between border-t border-slate-900 px-2 py-1"
         >
+        
           <p>subtotal:</p>
-          <p>$490</p>
+          <p>${{ (sum).toFixed(2)  }}</p>
         </div>
         <div
           class="flex w-full justify-between border-t border-slate-900 px-2 py-1"
         >
           <p>itbis:</p>
-          <p>$10</p>
+          <p>${{ (sum * itbis).toFixed(2) }}</p>
         </div>
         <div
           class="bg-lime-600 text-white flex w-full text-2xl justify-between border-t border-slate-900 p-2"
         >
           <p>total:</p>
-          <p>$500</p>
+          <p>${{ (sum + (sum * itbis )).toFixed(2)   }}</p>
         </div>
       </div>
     </div>
