--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<div class="cursor-pointer	 min-h-screen w-44 object-contain space-y-20 bg-white text-gray-700 drop-shadow-lg  flex flex-col  " >
+<div class="min-h-screen min-w-[10vw]  space-y-20 bg-white text-gray-700 drop-shadow-lg  flex flex-col  " >
 
     <a routerLink="">
     <div class="logo w-full h-1/4 mt-5 p-3 flex space-x-4 drop-shadow-xl">
