--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -8,7 +8,7 @@
         <app-client-table></app-client-table>
           <!--Modal agregar productos-->
       <dialog #modal id="modal" class="modal 2xl:w-3/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl pt-0">
-        <p class="xl:text-xl 2xl:text-2xl font-bold text-center 2xl:m-9 xl:m-6">Agregar cliente</p>
+        <p class="xl:text-xl 2xl:text-2xl font-semibold text-center 2xl:m-9 xl:m-6">Agregar cliente</p>
         <form action="" method="dialog">
             <div  class=" flex flex-col  2xl:gap-6 xl:gap-2 h-1/2 ">
 
@@ -107,8 +107,8 @@
               
             </div>
             <div class="flex justify-center gap-16">
-                <button type="submit" class="mt-5 bg-lime-600 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">Submit</button>
-                <button (click)="closeModal()" class="mt-5 bg-red-500 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4  p-4 rounded-xl shadow-lg hover:bg-red-600  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300 ">Close</button>
+                <button type="submit" class="mt-5 bg-lime-600 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white  py-2 px-4 hover:scale-105 ease-in-out duration-300">Submit</button>
+                <button (click)="closeModal()" class="mt-5 bg-red-500 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4  p-4 rounded-xl shadow-lg hover:bg-red-600  text-white  py-2 px-4 hover:scale-105 ease-in-out duration-300 ">Close</button>
             </div>
         </form>
        
