--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,5 +1,6 @@
 <div
-  class="bg-gray-100 rounded-md drop-shadow-sm shadow-lg hover:scale-105 ease-in-out duration-300"
+(click)="onShowDetail()"
+  class="bg-gray-100 h-full rounded-md drop-shadow-sm shadow-lg hover:scale-105 ease-in-out duration-300 "
 >
   <app-img
     *ngIf="product.images.length > 0"
@@ -10,11 +11,6 @@
       <p >{{ product.title }}</p>
       <h2>{{ product.price | currency: "" }}</h2>
     </div>
-    <button
-      class="linea bg-gray-200 font px-3 rounded-xl shadow-md hover:scale-105 ease-in-out duration-300 mt-1 pt-1"
-      (click)="onShowDetail()"
-    >
-      Add cart
-    </button>
+    
   </div>
 </div>
