--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center h-12  mx-5 ml-0 bg-lime-500 shadow-xl rounded-lg relative py-8">
+<div class="flex justify-between items-center h-12  mx-5 mb-10 bg-lime-500 shadow-xl rounded-lg relative py-8 ">
     <div class="justify-start flex flex-row">
          <!--Boton buscar-->
     <div class="m-3 py-5 px-4 h-8 w-96 bg-white shadow-md rounded-lg cursor-pointer flex items-center text-sm">
