--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300;500;600;700&display=swap');
 
 *{
-    // font-family: 'League Spartan', sans-serif;
-    // font-family: 'Poppins', sans-serif;
+    font-family: 'League Spartan', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none;
 }
