--- a/src/app/pages/main-module/dashboard/dashboard.component.scss
+++ b/src/app/pages/main-module/dashboard/dashboard.component.scss
@@ -7,7 +7,7 @@
       bottom: 0px;
       left: 0px;
       right: 0px;
-      background-image: url(../../../assets/img/pattern-icon-13.jpg);
+      background-image: url(../../../../assets/img/pattern-icon-13.jpg);
       filter: brightness(0.7);
       background-size: cover;
       background-position: top-center;
