--- a/src/app/pages/session-module/log-in/log-in.component.scss
+++ b/src/app/pages/session-module/log-in/log-in.component.scss
@@ -4,7 +4,7 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
-    background-image: url(../../../assets/img/imgPrincipal.jpg);
+    background-image: url(../../../../assets/img/imgPrincipal.jpg);
     background-size: cover;
     background-position: top-center;
 }
