--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="relative  grid xl:grid-cols-6 gap-4 p-10 overflow-y-scroll   max-h-[70vh] ">
+<div class="relative  grid 2xl:grid-cols-6 lg:grid-cols-5 md:grid-cols-4  gap-4 p-10 overflow-y-scroll   max-h-[70vh] ">
     
     <app-product
       [product]="product"
