--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -3,7 +3,7 @@
          <!--Boton buscar-->
     <div class="m-3 py-5 px-4 h-8 w-96 bg-white shadow-md rounded-lg cursor-pointer flex items-center text-sm">
         <input [(ngModel)]="productText" (keyup)="onPropagarMensaje()" class="p-5 px-2 h-8 w-96 outline-0 rounded-lg " type="text"  placeholder="Buscar...">
-        <button (click)="onPropagarMensaje()" class="p-4 hover:scale-110 ease-in-out duration-300">
+        <button  class="p-4 hover:scale-110 ease-in-out duration-300">
             <i class="fa-solid fa-magnifying-glass justify-end"></i>
         </button>
     </div>
@@ -11,7 +11,7 @@
     <div>
         <select id="countries" class="text-gray-900 text-sm p-2.5 ml-0 dark:border-gray-200 focus:border-white-500 dark:text-black cursor-pointer w-32 outline-none m-3 flex items-center justify-center rounded-xl shadow-lg hover:scale-105 ease-in-out duration-300">
           <option selected disabled>{{selected? selected : "Categoria"}}</option>
-          <option value="US" *ngFor="let opcion of opciones">{{opcion}}</option>
+          <option value={{ option }} *ngFor="let option of options">{{option}}</option>
         </select>
     </div>
 </div>
