integracion backend cliente casi listo

--- a/src/app/pages/main-module/client-page/client-page.component.scss
+++ b/src/app/pages/main-module/client-page/client-page.component.scss
@@ -38,3 +38,6 @@
   -webkit-box-shadow: 5px 5px 22px 3px rgba(0,0,0,0.63); 
 box-shadow: 5px 5px 22px 3px rgba(0,0,0,0.63);
 }
+.invalid{
+  opacity: 0.5;
+}
