agrande el login y el signup, agregue el servicio de user y cree el form group de sign up

--- a/src/app/pages/session-module/log-in/log-in.component.html
+++ b/src/app/pages/session-module/log-in/log-in.component.html
@@ -2,7 +2,7 @@
     <!--Efecto blur y centralizacion  del modal-->
     <div class="flex justify-center items-center w-full h-full _filter">
         <!--Modal-->
-        <div class="flex 2xl:w-3/5 xl:w-4/6 h-2/3 rounded-2xl">
+        <div class="flex w-4/6 h-4/5 2xl:text-md xl:text-sm rounded-2xl">
         <!--Lado izquierdo del modal (titulo de billFast Lite)-->
         <div class="justify-center h-full w-1/2 rounded-l-2xl bg-lime-500 opacity-80">
             <div class="h-full w-full bg-black/10 grid place-content-center rounded-l-2xl">
