--- a/src/app/pages/session-module/sign-up/sign-up.component.html
+++ b/src/app/pages/session-module/sign-up/sign-up.component.html
@@ -3,7 +3,7 @@
     <!--Efecto blur y centralizacion  del modal-->
     <div class="flex justify-center items-center w-full h-full _filter">
         <!--Modal-->
-        <div class="flex 2xl:w-3/5 xl:w-4/6 h-2/3 rounded-2xl">
+        <div class="flex w-4/6 h-4/5 2xl:text-md xl:text-sm rounded-2xl">
 
         <!--Lado izquierdo del modal (titulo de billFast Lite)-->
         <div class="justify-center h-full w-1/2 rounded-l-2xl bg-lime-500 opacity-80">
@@ -17,13 +17,13 @@
                 <h1 class="text-gray-700 xl:text-2xl font-bold my-5">Regístrate</h1>
                 <p>¿Ya tienes una cuenta? <span class="font-bold text-gray-700"><a routerLink="/log-in">Inicia sesión</a></span></p>
             </div>
-            <form [formGroup]="form" (ngSubmit)="RegistrarUsuario()">
+            <form [formGroup]="register" (ngSubmit)="registerUser()">
 
                 <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
                 <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                       Email
                 </label>
-                <input formControlName="inputUser" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-first-name" type="email" placeholder="Ingrese su correo" [class.red-input]="this.form.get('inputUser')?.invalid && this.form.get('inputUser')?.touched"/>
+                <input formControlName="inputUser" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-first-name" type="email" placeholder="Ingrese su correo" [class.red-input]="this.register.get('inputUser')?.invalid && this.register.get('inputUser')?.touched"/>
                 
                 </div>
     
@@ -31,14 +31,14 @@
                 <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                     Contraseña: 
                 </label>
-                <input formControlName="inputPassword" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña" [class.red-input]="this.form.get('inputPassword')?.invalid && this.form.get('inputPassword')?.touched"/>
+                <input formControlName="inputPassword" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña" [class.red-input]="this.register.get('inputPassword')?.invalid && this.register.get('inputPassword')?.touched"/>
                 </div>
     
                 <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
                 <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                       Repita su contraseña:
                 </label>
-                <input formControlName="inputRepeatPassword" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-first-name" type="password" placeholder="Repita su contraseña"[class.red-input]="this.form.get('inputPassword')?.invalid && this.form.get('inputPassword')?.touched"/>
+                <input formControlName="inputRepeatPassword" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-first-name" type="password" placeholder="Repita su contraseña"[class.red-input]="this.register.get('inputPassword')?.invalid && this.register.get('inputPassword')?.touched"/>
                 </div> 
                 <div class="flex justify-center items-center w-full">
                     <!-- <a routerLink="/sign-up">  -->
