--- a/src/app/pages/session-module/log-in/log-in.component.html
+++ b/src/app/pages/session-module/log-in/log-in.component.html
@@ -2,7 +2,7 @@
     <!--Efecto blur y centralizacion  del modal-->
     <div class="flex justify-center items-center w-full h-full _filter">
         <!--Modal-->
-        <div class="flex w-4/6 h-4/5 2xl:text-md xl:text-xs rounded-2xl">
+        <div class="flex w-4/6 h-4/5 2xl:text-lg xl:text-xs rounded-2xl">
         <!--Lado izquierdo del modal (titulo de billFast Lite)-->
         <div class="justify-center h-full w-1/2 rounded-l-2xl bg-lime-500 opacity-80">
             <div class="h-full w-full bg-black/10 grid place-content-center rounded-l-2xl">
@@ -51,7 +51,8 @@
             </div> 
             <div class="flex justify-center items-center w-full">
                 <!-- <a [routerLink]="ruta">  -->
-                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3">
+                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3"
+                    [disabled]="login.invalid">
                     Inicia sesión
                     </button>
                 <!-- </a> -->
