--- a/src/app/pages/session-module/sign-up/sign-up.component.html
+++ b/src/app/pages/session-module/sign-up/sign-up.component.html
@@ -3,7 +3,7 @@
     <!--Efecto blur y centralizacion  del modal-->
     <div class="flex justify-center items-center w-full h-full _filter">
         <!--Modal-->
-        <div class="flex w-4/6 h-4/5 2xl:text-md xl:text-xs rounded-2xl">
+        <div class="flex w-4/6 h-4/5 2xl:text-lg xl:text-xs rounded-2xl">
 
         <!--Lado izquierdo del modal (titulo de billFast Lite)-->
         <div class="justify-center h-full w-1/2 rounded-l-2xl bg-lime-500 opacity-80">
@@ -18,16 +18,26 @@
                 <p>¿Ya tienes una cuenta? <span class="font-bold text-gray-700"><a routerLink="/log-in">Inicia sesión</a></span></p>
                 <app-spinner class="my-2" *ngIf="loading"></app-spinner>
             </div>
-            <form [formGroup]="register" (ngSubmit)="registerUser()" class="space-y-6 xl:space-y-4">
-
-                <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-                <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
-                      Email
-                </label>
-                <input formControlName="inputUser" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo" [class.red-input]="this.register.get('inputUser')?.invalid && this.register.get('inputUser')?.touched"/>
-                <span class="text-red-500 pl-5"
-                *ngIf="register.get('inputUser')?.hasError('required') && register.get('inputUser')?.touched">
-                El email <strong>es requido</strong></span>
+            <form [formGroup]="register" #signupForm="ngForm" (ngSubmit)="registerUser()" class="space-y-6 xl:space-y-4">
+                <div class="flex">
+                    <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+                    <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                          Email
+                    </label>
+                    <input formControlName="inputUser" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo" [class.red-input]="this.register.get('inputUser')?.invalid && this.register.get('inputUser')?.touched"/>
+                    <span class="text-red-500 pl-5"
+                    *ngIf="register.get('inputUser')?.hasError('required') && register.get('inputUser')?.touched">
+                    El email <strong>es requerido</strong></span>
+                    </div>
+                    <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+                        <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                              Nombre
+                        </label>
+                        <input formControlName="inputUserName" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="Ingrese su correo" [class.red-input]="this.register.get('inputUseName')?.invalid && this.register.get('inputUserName')?.touched"/>
+                        <span class="text-red-500 pl-5"
+                        *ngIf="register.get('inputUserName')?.hasError('required') && register.get('inputUserName')?.touched">
+                        El nombre de usuario <strong>es requido</strong></span>
+                        </div>
                 </div>
 
                 <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
@@ -54,7 +64,7 @@
                 <div class="flex justify-center items-center w-full">
                     <!-- <a routerLink="/sign-up">  -->
                         <button type="submit" class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3"
-                        [class.mt-0]="register.get('inputRepeatPassword')?.touched">
+                        [class.mt-0]="register.get('inputRepeatPassword')?.touched" [disabled]="register.invalid">
                         Regístrate</button>
                     <!-- </a> -->
                 </div>
