funciona el login en conjunto con el backend

--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -18,7 +18,7 @@
     <div class="menu w-full justify-start items-center">
       <ul class="p-2 space-y-12 xl:space-y-7 2xl:space-y-14 items-center">
         
-          <a routerLink="" routerLinkActive="text-lime-600" [routerLinkActiveOptions]="{exact: true}">
+          <a routerLink="/dashboard" routerLinkActive="text-lime-600" [routerLinkActiveOptions]="{exact: true}">
             <li class="">
             <div class="flex items-center space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
             rounded-lg">
